# ml_4_mesh

./: .gitignore  .gitmodules  README.md
src/: CMakeLists.txt
src/CppNumericalSolvers/include/cppoptlib/linesearch/: morethuente.h
src/Geo/: CMakeLists.txt  transofrom.cc  transofrom.hh
src/Import/: CMakeLists.txt  load_obj .cc  load_obj.hh  save_obj.cc  save_obj.hh
src/MeshSegmentation/: CMakeLists.txt  aa.cxx  data.txt  machine.cxx  machine.hxx  main.cxx  mesh_training.cxx  mesh_training.hxx
src/MeshSegmentation/Topology/: decompose.cc  decompose.hh
src/PolygonTriangularization/: CMakeLists.txt  poly_triang.cc
src/Test/: CMakeLists.txt  flatter.cxx  lscm.cxx  lscm_sparse.cxx  lscm_sparse2.cxx  main.cxx  oo.cxx  optim_non_linear.cxx  optimize_function.cxx  optimize_function.hxx  xxxxx.hxx
src/Test/Data/: cube.bnd
src/Test/Data/machines/0000/: data_16.pb  data_22.pb  data_25.pb  data_graph.pb
src/Test/Data/machines/0001/: data_10.pb  data_13.pb  data_15.pb  data_20.pb  data_25.pb  data_30.pb  data_4.pb  data_5.pb  data_7.pb  data_graph.pb
src/Test/Data/machines/0002/: data_10.pb  data_15.pb  data_20.pb  data_25.pb  data_30.pb  data_5.pb
src/Topology/: CMakeLists.txt  decompose.cc
src/Utils/: CMakeLists.txt  graph.cc
src/flatten/: CMakeLists.txt  energy_function.cxx  energy_function.hxx  flatten.cxx  flatten.hxx  optimal_rotation.cxx  optimal_rotation.hxx
src/mesh_segmentation/: CMakeLists.txt  aa.cxx  data.txt  machine.cxx  machine.hxx
src/sparselm/: CMakeLists.txt  splm.c  splm.h  splm_ccsm.c  splm_crsm.c  splm_dss.c  splm_hessian.c  splm_misc.c  splm_pardiso.c  splm_priv.h  splm_stm.c
src/splm/: CMakeLists.txt  lm.cxx  lm.hxx
src/tensorflow/: CMakeLists.txt
src/tensorflow/include/tensorflow/cc/ops/: array_ops.h  array_ops_internal.h  audio_ops.h  batch_ops.h  bitwise_ops.h  boosted_trees_ops_internal.h  candidate_sampling_ops.h  checkpoint_ops.h  control_flow_ops.h  control_flow_ops_internal.h  ctc_ops.h  cudnn_rnn_ops.h  cudnn_rnn_ops_internal.h  data_flow_ops.h  dataset_ops.h  dataset_ops_internal.h  decode_proto_ops.h  encode_proto_ops.h  functional_ops.h  image_ops.h  image_ops_internal.h  io_ops.h  linalg_ops.h  linalg_ops_internal.h  list_ops.h  logging_ops.h  lookup_ops.h  manip_ops.h  math_ops.h  math_ops_internal.h  nn_ops.h  nn_ops_internal.h  parsing_ops.h  random_ops.h  remote_fused_graph_ops.h  resource_variable_ops.h  rpc_ops.h  script_ops.h  sdca_ops.h  set_ops.h  (+7 more)
